feat[add]: finalização do projeto do freeCodeCamp

--- a/Resgistration Form/index.html
+++ b/Resgistration Form/index.html
@@ -19,13 +19,13 @@
             
         </fieldset>
         <fieldset>
-            <label for=""><input type="radio" name="account-type"> Conta Pessoal</label>
-            <label for=""><input type="radio" name="account-type"> Conta da Empresa</label>
-            <label for=""><input type="checkbox" name="termos-e-condicoes" required> Aceito <a href="https://lh5.googleusercontent.com/3K7NVrpubuVMP5a0YMRfIrXvjRa6VsXOyIVRb2h9BuYnLSs22QU7eUTJD4Da_LPEPxrkyJRVrMl5kTDXXTTPyu0DEtjO91pSUQbVbfNN8NrA7ThRnIyxWkvH4Rit2kHSalRzJIE8">Termos e Condições</a></label>
+            <label for=""><input type="radio" name="account-type" class="inline"> Conta Pessoal</label>
+            <label for=""><input type="radio" name="account-type" class="inline"> Conta da Empresa</label>
+            <label for=""><input type="checkbox" name="termos-e-condicoes" required class="inline"> Aceito <a href="https://lh5.googleusercontent.com/3K7NVrpubuVMP5a0YMRfIrXvjRa6VsXOyIVRb2h9BuYnLSs22QU7eUTJD4Da_LPEPxrkyJRVrMl5kTDXXTTPyu0DEtjO91pSUQbVbfNN8NrA7ThRnIyxWkvH4Rit2kHSalRzJIE8">Termos e Condições</a></label>
         </fieldset>
         <fieldset>
-            <label for="">Insira uma imagem: <input type="file" value="Clique " name="image"></label>
-            <label for="">Informe sua idade: <input type="number" min="13" max="120" name="age"></label>
+            <label for="">Insira uma imagem: <input type="file" value="Clique " name="image" ></label>
+            <label for="">Informe sua idade: <input type="number" min="13" max="120" name="age" ></label>
             <label for="">De onde você me conhece?
             <select name="conhece" id="">
                 <option value="">(escolha um)</option>
